Science part DEPRECATED

--- a/GameData/Knes/Parts/DEPRECATED/Science/Box_Sensor_GasAnalyzer.cfg
+++ b/GameData/Knes/Parts/DEPRECATED/Science/Box_Sensor_GasAnalyzer.cfg
@@ -10,7 +10,7 @@ PART
 	
 	MODEL
 	{
-		model = Knes/Parts/Science/Box_Sensor_GasAnalyzer
+		model = Knes/Parts/DEPRECATED/Science/Box_Sensor_GasAnalyzer
 	}
 	
 	scale = 1
@@ -18,12 +18,15 @@ PART
 	
 	node_attach = 0.0, 0.096, 0.0, 0.0, 1.0, 0.0
 	
+	TechHidden = True
+	category = none
+	subcategory  = 0	
+  	
 	TechRequired = survivability
 	entryCost = 2200
 	cost = 880
-	category = Science
 	subcategory = 0
-	title = GasAnalyzer
+	title = GasAnalyzer DEPRECATED
 	manufacturer = Knes
 	description = This experiment device contained five manometer analysis cells, a moisture gauge and control electronics in a 10 cm diameter cylindrical package. Include two manometers and three miscellaneous experiments designed to detect trace amounts of gases
 	attachRules = 0,1,0,0,1
