--- a/GameData/Knes/Parts/DEPRECATED/Science/Box_Sensor_IRSpectrometer.cfg
+++ b/GameData/Knes/Parts/DEPRECATED/Science/Box_Sensor_IRSpectrometer.cfg
@@ -4,28 +4,31 @@
 
 PART
 {
-	name = Box_Sensor_Photopolarimeter
+	name = Box_Sensor_IRSpectrometer
 	module = Part
 	author = Well
 	
 	MODEL
 	{
-		model = Knes/Parts/Science/Box_Sensor_Photopolarimeter
+		model = Knes/Parts/DEPRECATED/Science/Box_Sensor_IRSpectrometer
 	}
 	
 	scale = 1
 	rescaleFactor = 1
 	
-	node_attach = 0.0, 0.096, 0.0, 0.0, 1.0, 0.0
+	node_attach = 0.0, 0.0, -0.096, 0.0, 0.0, 1.0
 	
+	TechHidden = True
+	category = none
+	subcategory  = 0	
+  	
 	TechRequired = basicScience
 	entryCost = 2200
 	cost = 880
-	category = Science
 	subcategory = 0
-	title = Photopolarimeter
+	title = IR Spectrometer DEPRECATED
 	manufacturer = Knes
-	description = A sample science box for test
+	description = Spectrometer to measure the thermal radiation of the atmosphere and surface, measuring the ranges from 7 to 20 μm and 14 to 38 μm, each at 150 positions.
 	attachRules = 0,1,0,0,1
 	mass = 0.005
 	dragModelType = default
@@ -50,7 +53,7 @@ PART
 	MODULE
 	{
 		name = ModuleScienceExperiment
-		experimentID = Photopolarimeter
+		experimentID = IRSpectrometer
 		experimentActionName = Log Data
 		resetActionName = Delete Data
 		useStaging = False
