--- a/GameData/Knes/Parts/DEPRECATED/Science/Box_Sensor_Photometer.cfg
+++ b/GameData/Knes/Parts/DEPRECATED/Science/Box_Sensor_Photometer.cfg
@@ -10,7 +10,7 @@ PART
 	
 	MODEL
 	{
-		model = Knes/Parts/Science/Box_Sensor_Photometer
+		model = Knes/Parts/DEPRECATED/Science/Box_Sensor_Photometer
 	}
 	
 	scale = 1
@@ -18,12 +18,15 @@ PART
 	
 	node_attach = 0.0, 0.0, 0.096, 0.0, 0.0, -1.0
 	
+	TechHidden = True
+	category = none
+	subcategory  = 0	
+  	
 	TechRequired = engineering101
 	entryCost = 2200
 	cost = 880
-	category = Science
 	subcategory = 0
-	title = Photometer
+	title = Photometer DEPRECATED
 	manufacturer = Knes
 	description = This photometer use three fiber-optic pipes to view upward (narrow and wide angles) and downward. A wheel of five glass filters provided color and radiance measurements at wavelengths between 440 and 1160 nm (green, yellow, red, IR1, IR2).
 	attachRules = 0,1,0,0,1
