--- a/GameData/Knes/Parts/DEPRECATED/Science/Crystallisation_Facility.cfg
+++ b/GameData/Knes/Parts/DEPRECATED/Science/Crystallisation_Facility.cfg
@@ -10,7 +10,7 @@ PART
 	
 	MODEL
 	{
-		model = Knes/Parts/Science/Crystallisation_Facility
+		model = Knes/Parts/DEPRECATED/Science/Crystallisation_Facility
 	}
 	
 	scale = 1
@@ -18,12 +18,15 @@ PART
 	
 	node_attach = 0.0, 0.0, 0.096, 0.0, 0.0, -1.0
 	
+	TechHidden = True
+	category = none
+	subcategory  = 0	
+  
 	TechRequired = spaceExploration
 	entryCost = 8500
 	cost = 13000
-	category = Utility
 	subcategory = 0
-	title = Crystallisation Facility
+	title = Crystallisation Facility DEPRECATED
 	manufacturer = Knes
 	description = The Crystallisation Facility is a multi-user instrument for the fundamental study of the processes of nucleation and crystallisation of biological macro-molecules, and specifically, how these processes are influenced by gravity. This Instrument produces 50 protein crystal in ~23 days.
 	attachRules = 0,1,0,0,1
