--- a/GameData/Knes/Parts/DEPRECATED/Science/Box_Sensor_Hydrometer.cfg
+++ b/GameData/Knes/Parts/DEPRECATED/Science/Box_Sensor_Hydrometer.cfg
@@ -4,28 +4,32 @@
 
 PART
 {
-	name = Box_Sensor_IRSpectrometer
+	name = Box_Sensor_Hydrometer
 	module = Part
 	author = Well
 	
 	MODEL
 	{
-		model = Knes/Parts/Science/Box_Sensor_IRSpectrometer
+		model = Knes/Parts/DEPRECATED/Science/Box_Sensor_Hydrometer
 	}
 	
 	scale = 1
 	rescaleFactor = 1
 	
-	node_attach = 0.0, 0.0, -0.096, 0.0, 0.0, 1.0
+	node_attach = 0.0, 0.0, 0.096, 0.0, 0.0, -1.0
 	
 	TechRequired = basicScience
+	
+	TechHidden = True
+	category = none
+	subcategory  = 0	
+  	
 	entryCost = 2200
 	cost = 880
-	category = Science
 	subcategory = 0
-	title = IR Spectrometer
+	title = Hydrometer DEPRECATED
 	manufacturer = Knes
-	description = Spectrometer to measure the thermal radiation of the atmosphere and surface, measuring the ranges from 7 to 20 μm and 14 to 38 μm, each at 150 positions.
+	description = Experiment device to measure water vapor by two methods. Both were held inside insulated domes, temperature stabilized with a heat-absorbing phase-change material (lithium nitrate trihydrate). The right dome carried an electroconductivity sensor based on the moisture absorbing salt lithium chloride. 
 	attachRules = 0,1,0,0,1
 	mass = 0.005
 	dragModelType = default
@@ -36,30 +40,20 @@ PART
 	maxTemp = 1200 // = 3200
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-	tags = Gas Knes atmospher experiment pressure research rerun re-run reus re-us redo re-do reset re-set science sensor
+	tags = Gas Interkosmos atmospher experiment pressure research rerun re-run reus re-us redo re-do reset re-set science sensor
 	
 	MODULE
 	{
-		name = ModuleAnimateGeneric
-		animationName = Animation
-		startEventGUIName = Log Data
-		endEventGUIName = Close
-		actionGUIName = Toggle
-		eventAvailableEditor = True
-	}
-	MODULE
-	{
 		name = ModuleScienceExperiment
-		experimentID = IRSpectrometer
+		experimentID = Hydrometer
 		experimentActionName = Log Data
 		resetActionName = Delete Data
 		useStaging = False
 		useActionGroups = True
 		hideUIwhenUnavailable = False
 		xmitDataScalar = 0.5
-		FxModules = 0	
 		dataIsCollectable = True
-		collectActionName = Take Data
+		collectActionName = #autoLOC_238018 //#autoLOC_238018 = Take Data
 		interactionRange = 1.5
 		rerunnable = True
 		usageReqMaskInternal = 1
