DEPRECATED Lifting bodies and safe system

--- a/GameData/Knes/Parts/DEPRECATED/LiftingsBodies/CEV/Knes_Command_K-CEV.cfg
+++ b/GameData/Knes/Parts/DEPRECATED/LiftingsBodies/CEV/Knes_Command_K-CEV.cfg
@@ -10,7 +10,7 @@ PART
 
 	MODEL
 	{
-	   model = Knes/Parts/LiftingsBodies/CEV/Knes_Command_K-CEV
+	   model = Knes/Parts/DEPRECATED/LiftingsBodies/CEV/Knes_Command_K-CEV
 	}
 
 	scale = 1
@@ -30,9 +30,10 @@ PART
 	TechRequired = advAerodynamics
 	entryCost = 55000
 	cost = 18000
-	category = Pods
-	subcategory = 0
-	title = K-CEV "Phoenix" Command Pod
+	TechHidden = True
+	category = none
+	subcategory  = 0	
+	title = K-CEV "Phoenix" Command Pod DEPRECATED
 	manufacturer = Knes
 	description = The Crew Exploration Vehicle "Phoenix". A small Space Shuttle shaped lifting body design big enough for five astronauts and their equipment. Its airplane-shaped design made it easier to navigate during high-speed returns to Kerbin than the capsule-shaped vehicles of the past.
 	tags = aero aircraft Knes cev shuttle KIS container K-CEV Phoenix
