--- a/GameData/Knes/Parts/DEPRECATED/LiftingsBodies/IXV/Knes_Command_K-IXV.cfg
+++ b/GameData/Knes/Parts/DEPRECATED/LiftingsBodies/IXV/Knes_Command_K-IXV.cfg
@@ -10,7 +10,7 @@ PART
 
 	MODEL
 	{
-	   model = Knes/Parts/LiftingsBodies/IXV/Knes_Command_K-IXV
+	   model = Knes/Parts/DEPRECATED/LiftingsBodies/IXV/Knes_Command_K-IXV
 	}
 
 	scale = 1
@@ -31,9 +31,10 @@ PART
 	TechRequired = aerodynamicSystems
 	entryCost = 11000
 	cost = 4000
-	category = Pods
+	TechHidden = True
+	category = none	
 	subcategory = 0
-	title = K-IXV "Patin" Command Pod
+	title = K-IXV "Patin" Command Pod DEPRECATED
 	manufacturer = Knes
 	description = K-IXV "Patin" used a lifting body arrangement with no wings of any sort. Re-entry was accomplished in a nose-high attitude like the Space Shuttle, with manoeuvring accomplished by rolling out-of-plane and then lifting in that direction, like an aircraft. Landing was accomplished by parachute. The K-IXV Command Pod was heralded as a far safer and more reliable option than its predecessors.
 	tags = command pod knes K-IXV control fly pilot plane space Patin
