--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem.cfg
@@ -37,9 +37,10 @@ PART
 	TechRequired = advAerodynamics
 	entryCost = 8800
 	cost = 2600
-	category = Utility
+	TechHidden = True
+	category = none	
 	subcategory = 0
-	title = SafeSystem for Plane Inline
+	title = SafeSystem for Plane Inline DEPRECATED
 	manufacturer = Knes
 	description = Save your Plane with the New SafeSystem! That also a good Adapter.
 	attachRules = 1,0,1,1,0
