--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem_1875.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem_1875.cfg
@@ -34,9 +34,10 @@ PART
 	TechRequired = aerodynamicSystems
 	entryCost = 6800
 	cost = 1800
-	category = Utility
+	TechHidden = True
+	category = none	
 	subcategory = 0
-	title = 1.875 SafeSystem for "Patin" Spacecraft
+	title = 1.875 SafeSystem for "Patin" Spacecraft DEPRECATED
 	manufacturer = Knes
 	description = Save your "Patin" spacecraft with the New SafeSystem! That also a good Adapter for 1.875 scale.
 	attachRules = 1,0,1,1,0
