Add new parts to Compatibility patch MechJeb

--- a/GameData/Knes/Compatibility/Mechjeb/Knes_Mechjeb.cfg
+++ b/GameData/Knes/Compatibility/Mechjeb/Knes_Mechjeb.cfg
@@ -15,7 +15,97 @@
 			name = MechJebCore
 		}
 	}
+	
+	@PART[_Knes_Sat_Asterix]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}
+	
+	@PART[_Knes_Sat_NanoSat]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}	
 
+	@PART[_Knes_Sat_Starlette]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}	
+	
+	@PART[_Knes_DiamantB_Avionics_0625]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}	
+	
+	@PART[_Knes_DiamantBP4_Avionics_09375]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}	
+	
+	@PART[_Knes_L3S_AR4_Avionics]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}	
+	
+	@PART[_Knes_L3S_Avionics_250]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}	
+	
+	@PART[_Knes_Vesta_Avionic_03125]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}	
+
+	@PART[_Knes_Vesta_CatPod_03125]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}	
+
+	@PART[Knes_Cargo_Pod_09375]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}
+
+	@PART[Knes_Crew_Pod_09375]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}	
+	
+//-----------------------------------------------------	
+	
 	@PART[Knes_Command_K-CEV]:NEEDS[MechJebCore]
 	{
 		MODULE
