Compatibility patch fixed

--- a/GameData/Knes/Compatibility/Pathfinder/Knes_Pathfinder.cfg
+++ b/GameData/Knes/Compatibility/Pathfinder/Knes_Pathfinder.cfg
@@ -27,3 +27,61 @@
 		maxStorage = 14000
 	}
 }
+
+@PART[Knes_Command_K-IXV]:NEEDS[Pathfinder]
+{
+	!MODULE[ModuleKISInventory] {}
+	
+	
+	MODULE
+	{
+		name = WBIConvertibleStorage
+		enableLogging = True
+		
+		fieldReconfigurable = True
+		confirmResourceSwitch = True
+		
+		showGUI = True
+		
+		defaultTemplate = KIS // LFO
+		templateNodes = STORAGE_TEMPLATE
+		
+		capacityFactor = 1
+		resourcesToKeep = ElectricCharge;Ablator;MonoPropellant;Food;Water;Oxygen;CarbonDioxide;Waste;WasteWater;Mulch;Supplies;Snacks;
+		
+		logoPanelTransforms = 
+		decalsVisible = false
+		
+		baseStorage = .001
+		maxStorage = 1000
+	}
+}
+
+@PART[Knes_Command_K-CEV]:NEEDS[Pathfinder]
+{
+	!MODULE[ModuleKISInventory] {}
+	
+	
+	MODULE
+	{
+		name = WBIConvertibleStorage
+		enableLogging = True
+		
+		fieldReconfigurable = True
+		confirmResourceSwitch = True
+		
+		showGUI = True
+		
+		defaultTemplate = KIS // LFO
+		templateNodes = STORAGE_TEMPLATE
+		
+		capacityFactor = 1
+		resourcesToKeep = ElectricCharge;Ablator;MonoPropellant;Food;Water;Oxygen;CarbonDioxide;Waste;WasteWater;Mulch;Supplies;Snacks;
+		
+		logoPanelTransforms = 
+		decalsVisible = false
+		
+		baseStorage = .001
+		maxStorage = 14000
+	}
+}
