--- a/GameData/Knes/Compatibility/Mechjeb/Knes_Mechjeb.cfg
+++ b/GameData/Knes/Compatibility/Mechjeb/Knes_Mechjeb.cfg
@@ -1,4 +1,19 @@
 
+	@PART[Knes_Command_K-CEV]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}
+
+	@PART[Knes_Command_K-IXV]:NEEDS[MechJebCore]
+	{
+		MODULE
+		{
+			name = MechJebCore
+		}
+	}
 
 	@PART[Knes_Command_Cortex]:NEEDS[MechJebCore]
 	{
