--- a/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
@@ -81,7 +81,14 @@ PART
 			orientation = 0,0,180
 		}
 	}
-
+    MODULE
+    {
+        name = ModuleScienceContainer
+        reviewActionName = Review Stored Data
+        storeActionName = Store Experiments
+        evaOnlyStorage = True
+        storageRange = 1.3
+    }
 	MODULE
 	{
 		name = ModuleSAS
