--- a/GameData/Knes/Compatibility/Pathfinder/Knes_Pathfinder.cfg
+++ b/GameData/Knes/Compatibility/Pathfinder/Knes_Pathfinder.cfg
@@ -57,6 +57,35 @@
 	}
 }
 
+@PART[Knes_Cargo_Pod_09375]:NEEDS[Pathfinder]
+{
+	!MODULE[ModuleKISInventory] {}
+	
+	
+	MODULE
+	{
+		name = WBIConvertibleStorage
+		enableLogging = True
+		
+		fieldReconfigurable = True
+		confirmResourceSwitch = True
+		
+		showGUI = True
+		
+		defaultTemplate = KIS // LFO
+		templateNodes = STORAGE_TEMPLATE
+		
+		capacityFactor = 1
+		resourcesToKeep = ElectricCharge;Ablator;MonoPropellant;Food;Water;Oxygen;CarbonDioxide;Waste;WasteWater;Mulch;Supplies;Snacks;
+		
+		logoPanelTransforms = 
+		decalsVisible = false
+		
+		baseStorage = .001
+		maxStorage = 1000
+	}
+}
+
 @PART[Knes_Command_K-CEV]:NEEDS[Pathfinder]
 {
 	!MODULE[ModuleKISInventory] {}
