Engine FX and Sound Fix

--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L140.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L140.cfg
@@ -108,11 +108,11 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_rocket_spurts
+				clip = Knes/Sounds/sound_rocket_hard
 				volume = 0.0 0.0
-				volume = 1.0 1.0
-				pitch = 0.0 0.2
-				pitch = 1.0 1.0
+				volume = 1.0 1.5
+				pitch = 0.0 0.3
+				pitch = 1.0 1.5
 				loop = true
 			}
 
@@ -180,7 +180,7 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_vent_soft
+				clip = Knes/Sounds/sound_rocket_ignition
 				volume = 1.0
 				pitch = 2.0
 				loop = false
