--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
@@ -107,11 +107,11 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_rocket_spurts
+				clip = Knes/Sounds/sound_rocket_hard
 				volume = 0.0 0.0
-				volume = 1.0 1.0
-				pitch = 0.0 0.2
-				pitch = 1.0 1.0
+				volume = 1.0 1.7
+				pitch = 0.0 0.3
+				pitch = 1.0 1.7
 				loop = true
 			}
 			MODEL_MULTI_PARTICLE
@@ -191,7 +191,7 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_vent_soft
+				clip = Knes/Sounds/sound_rocket_ignition
 				volume = 1.0
 				pitch = 2.0
 				loop = false
