--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Engine.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Engine.cfg
@@ -81,7 +81,7 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_rocket_mini
+				clip = Knes/Sounds/sound_rocket_hard
 				volume = 0.0 0.0
 				volume = 1.0 1.0
 				pitch = 0.0 0.8
@@ -150,7 +150,7 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_vent_medium
+				clip = Knes/Sounds/sound_rocket_ignition
 				loop = false
 			}
 		}
