--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Engine_Vulcain.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Engine_Vulcain.cfg
@@ -16,14 +16,6 @@ PART
 	scale = 1	
 	rescaleFactor = 1
 	
-	fx_exhaustFlame_blue = 0.0, -2, 0.0, 0.0, 1.0, 0.0, running
-	fx_exhaustLight_blue = 0.0, -2, 0.0, 0.0, 0.0, 1.0, running
-	fx_smokeTrail_light = 0.0, -2, 0.0, 0.0, 1.0, 0.0, running
-	fx_exhaustSparks_flameout = 0.0, -2, 0.0, 0.0, 1.0, 0.0, flameout
-	sound_vent_medium = engage
-	sound_rocket_hard = running
-	sound_vent_soft = disengage
-	sound_explosion_low = flameout
 	
 	node_stack_top = 0.0, 1.718, 0.0, 0.0, 1.0, 0.0, 3
 	node_stack_bottom = 0.0, -3.202, 0.0, 0.0, -1.0, 0.0, 3
@@ -54,16 +46,19 @@ PART
 	
 	MODULE
 	{
-		name = ModuleEngines
+		name = ModuleEnginesFX
+		engineID = Vulcain
+		runningEffectName = running_closed			
 		thrustVectorTransformName = thrustTransform
+		powerEffectName = shockDiamond	
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 1390
 		heatProduction = 180
-		fxOffset = 0, 0, 0.1
+		fxOffset = 0, 0, 0
 		EngineType = LiquidFuel
-		exhaustDamageDistanceOffset = 0.5
+		exhaustDamageDistanceOffset = 1.5
 		PROPELLANT
 		{
 			name = LiquidFuel
@@ -82,12 +77,97 @@ PART
 			key = 5 0.001
 		}
 	}
+	EFFECTS
+	{
+		running_closed
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.5
+				pitch = 0.0 0.8
+				pitch = 1.0 1.2
+				loop = true
+			}
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_light
+				transformName = smokePoint
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/hydroLOXFlame
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.1 0.8
+				emission = 1.0 1.1
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localPosition = 0, 0, 0	
+			}
+		}
+		shockDiamond
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustFlame_blue_small
+				transformName = thrustTransform2
+				emission = 0.0 0.0
+				emission = 0.05 0.5
+				emission = 0.5 1.5
+				emission = 1.0 3.5
+				speed = 0.0 0.5
+				speed = 1.0 1.0
+				localOffset = 0, -0.5, 0
+				localScale = 3.5, 3.5, 3.5					
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				volume = 1.1
+				pitch = 2.0
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+	}	
+	
 	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = Gimbal
 		gimbalRange = 8
 	}
+	
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
