--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_Engine_Zebulon.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_Engine_Zebulon.cfg
@@ -48,15 +48,15 @@ PART
 	MODULE
 	{
 		name = ModuleEnginesFX
+		runningEffectName = running_closed			
 		thrustVectorTransformName = thrustTransform
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 64
 		heatProduction = 80
-		fxOffset = 0, 0, 1.2
+		fxOffset = 0, 0, 0
 		EngineType = LiquidFuel
-		runningEffectName = running	
 		exhaustDamageDistanceOffset = 1.25
 		PROPELLANT
 		{
@@ -78,12 +78,12 @@ PART
 	}
 	EFFECTS
 	{
-		running
+		running_closed
 		{
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_rocket_hard
+				clip = Knes/Sounds/sound_rocket_hard
 				volume = 0.0 0.0
 				volume = 0.05 0.6
 				volume = 1.0 1.5
@@ -94,7 +94,7 @@ PART
 			PREFAB_PARTICLE
 			{
 				prefabName = fx_smokeTrail_light
-				transformName = thrustTransform
+				transformName = smokepoint
 				emission = 0.0 0.0
 				emission = 0.05 0.0
 				emission = 0.075 0.25
@@ -105,7 +105,6 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				//modelName = Squad/FX/ks25_Exhaust
 				modelName = Squad/FX/hydroLOXFlame
 				transformName = thrustTransform
 				emission = 0.0 0.0
@@ -113,37 +112,10 @@ PART
 				emission = 1.0 1.0
 				speed = 0.0 0.8
 				speed = 1.0 1.0
-				localPosition = 0, 0, -0.6
-				localScale = 0.8, 0.8, 0.8			
+				localPosition = 0, 0, 0		
 			}
 		}
-		shockDiamond
-		{
 
-//			MODEL_MULTI_PARTICLE
-//			{
-//				modelName = Squad/FX/diamondBlue
-//				transformName = thrustTransform
-//				emission = 0.0 0.0
-//				//emission = 0.05 0.0
-//				//emission = 0.075 0.5
-//				emission = 1.0 1.0
-//				speed = 0.0 0.2
-//				speed = 1.0 1.0
-//			}
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_exhaustFlame_blue_small
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.05 1.0
-				emission = 0.5 3.5
-				emission = 1.0 5.0
-				speed = 0.0 0.5
-				speed = 1.0 0.8
-				localOffset = 0, 0, -0.5
-			}
-		}
 		engage
 		{
 			AUDIO
