--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
@@ -47,7 +47,9 @@ PART
 	MODULE
 	{
 		name = ModuleEnginesFX
+		runningEffectName = running_closed			
 		thrustVectorTransformName = thrustTransform
+		powerEffectName = shockDiamond	
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
@@ -76,12 +78,12 @@ PART
 	}
 	EFFECTS
 	{
-		running
+		running_closed
 		{
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_rocket_hard
+				clip = Knes/Sounds/sound_rocket_hard
 				volume = 0.0 0.0
 				volume = 0.05 0.6
 				volume = 1.0 1.5
@@ -92,7 +94,7 @@ PART
 			PREFAB_PARTICLE
 			{
 				prefabName = fx_smokeTrail_light
-				transformName = thrustTransform
+				transformName = smokepoint
 				emission = 0.0 0.0
 				emission = 0.05 0.0
 				emission = 0.075 0.25
@@ -103,7 +105,6 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				//modelName = Squad/FX/ks25_Exhaust
 				modelName = Squad/FX/hydroLOXFlame
 				transformName = thrustTransform
 				emission = 0.0 0.0
@@ -120,14 +121,15 @@ PART
 			PREFAB_PARTICLE
 			{
 				prefabName = fx_exhaustFlame_blue_small
-				transformName = thrustTransform
+				transformName = thrustTransform2
 				emission = 0.0 0.0
-				emission = 0.05 1.0
-				emission = 0.5 3.5
-				emission = 1.0 5.0
+				emission = 0.05 0.5
+				emission = 0.5 1.5
+				emission = 1.0 3.0
 				speed = 0.0 0.5
-				speed = 1.0 0.8
-				localOffset = 0, 0, 0			
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0
+				localScale = 4, 4, 4					
 			}
 		}
 		engage
@@ -135,7 +137,7 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_vent_soft
+				clip = Knes/Sounds/sound_rocket_ignition
 				volume = 1.0
 				pitch = 2.0
 				loop = false
