--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
@@ -191,7 +191,7 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_rocket_mini
+				clip = Knes/Sounds/sound_rocket_normal
 				volume = 0.0 0.0
 				volume = 1.0 1.0
 				pitch = 0.0 0.8
@@ -260,7 +260,7 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_vent_medium
+				clip = Knes/Sounds/sound_rocket_ignition
 				loop = false
 			}
 		}
