--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_CrystalFactory.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_CrystalFactory.cfg
@@ -108,6 +108,18 @@ PART
 		 }
 	}
 	
+	MODULE
+	{
+		name = ModuleAnimationGroup
+		deployAnimationName = 
+		activeAnimationName = rotor
+		deployActionName = #autoLOC_6002380 //#autoLOC_6002380 = Deploy <<1>>
+		retractActionName = #autoLOC_6002381 //#autoLOC_6002381 = Retract <<1>>
+		toggleActionName = #autoLOC_6002382 //#autoLOC_6002382 = Toggle <<1>>
+		moduleType = #autoLOC_7001227  //Converter //#autoLOC_7001227 = Converter
+		autoDeploy = true
+	}
+	
 	RESOURCE
 	{
 		name = Crystal
