--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_09375.cfg
@@ -47,7 +47,12 @@ PART
 		amount = 50
 		maxAmount = 50
 	}
-	
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 200
+		maxAmount = 200
+	}		
     MODULE
     {
         name = ModuleColorChanger
