--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_ScienceLab.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_ScienceLab.cfg
@@ -17,10 +17,10 @@ PART
 	node_stack_top = 0.0, 0.9375, 0.0, 0.0, 1.0, 0.0
 	node_stack_bottom = 0.0, -0.9375, 0.0, 0.0, -1.0, 0.0
 	//node_attach = 0.0, 0.0, -0.625, 0.0, 0.0, 1.0, 1
-	TechRequired = generalConstruction
+	TechRequired = advExploration
 	entryCost = 21600
 	cost = 1250
-	category = Utility
+	category = Science
 	subcategory = 0
 	title = Science Module "Busy"
 	manufacturer = Knes
@@ -35,7 +35,7 @@ PART
 	maxTemp = 1000
 	skinMaxTemp = 2000
 	vesselType = Ship
-	CrewCapacity = 2
+	CrewCapacity = 1
 	bulkheadProfiles = size1
 	noAutoEVAMulti = True
 	tags = base contain outpost passenger statio (stor tour knes
