--- a/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA.cfg
+++ b/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA.cfg
@@ -5,6 +5,10 @@
 	{
 		model = Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA
 	}
+	MODEL
+	{
+		model = Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA2
+	}	
 //	MODEL
 //	{
 //		model = Squad/Spaces/OverlayMasks/Mk1CabinMask
