--- a/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_ScienceLab_IVA.cfg
+++ b/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_ScienceLab_IVA.cfg
@@ -5,14 +5,11 @@
 	{
 		model = Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA
 	}
-//	MODEL
-//	{
-//		model = Squad/Spaces/OverlayMasks/Mk1CabinMask
-//	}
-//	MODEL
-//	{
-//		model = Squad/Spaces/OverlayMasks/Mk1CabinBorder
-//	}
+	MODEL
+	{
+		model = Knes/Spaces/Station_Module_Hab_IVA/Station_Module_CrystalFactory_IVA2
+	}	
+
 	MODULE
 	{
 		name = InternalSeat
@@ -21,14 +18,7 @@
 		displayseatName = #autoLoc_6002197 //#autoLoc_6002197 = Seat <<1>>
 		displayseatIndex = 1
 	}
-	MODULE
-	{
-		name = InternalSeat
-		seatTransformName = Seat2
-		allowCrewHelmet = false
-		displayseatName = #autoLoc_6002197 //#autoLoc_6002197 = Seat <<1>>
-		displayseatIndex = 2
-	}
+
 	MODULE
 	{
 		name = InternalCameraSwitch
@@ -90,13 +80,6 @@
 		name = Seat_Passenger
 		position = 0.1875,-0.4125,-0.3750001
 		rotation = 8.146034E-08,0,0,1
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = Seat_Passenger
-		position = 0.1875,-0.4125,0.3750001
-		rotation = -2.16942E-14,1,-1.331581E-07,-1.629207E-07
 		scale = 1,1,1
 	}
 }
