--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Catherine_Stage_1875.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Catherine_Stage_1875.cfg
@@ -136,10 +136,10 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_rocket_mini
+				clip = Knes/Sounds/sound_rocket_normal
 				volume = 0.0 0.0
-				volume = 1.0 0.3
-				pitch = 0.0 0.75
+				volume = 1.0 1.2
+				pitch = 0.0 1.0
 				pitch = 1.0 1.5
 				loop = true
 			}
@@ -322,9 +322,7 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_vent_soft
-				volume = 1.0
-				pitch = 2.0
+				clip = Knes/Sounds/sound_rocket_ignition
 				loop = false
 			}
 		}
