Station IVA update

--- a/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_ScienceLab_IVA.cfg
+++ b/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_ScienceLab_IVA.cfg
@@ -1,4 +1,4 @@
-﻿INTERNAL
+INTERNAL
 {
 	name = Station_Module_ScienceLab_IVA
 	MODEL
@@ -8,17 +8,15 @@
 	MODEL
 	{
 		model = Knes/Spaces/Station_Module_Hab_IVA/Station_Module_CrystalFactory_IVA2
-	}	
-
+	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = Seat1
 		allowCrewHelmet = false
-		displayseatName = #autoLoc_6002197 //#autoLoc_6002197 = Seat <<1>>
+		displayseatName = #autoLoc_6002197
 		displayseatIndex = 1
 	}
-
 	MODULE
 	{
 		name = InternalCameraSwitch
@@ -77,9 +75,72 @@
 	}
 	PROP
 	{
-		name = Seat_Passenger
-		position = 0.1875,-0.4125,-0.3750001
-		rotation = 8.146034E-08,0,0,1
+		name = CargoBagA
+		position = 0.4716,-0.135,0.658
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 0.4935567,0.3927798,0.4393253
+	}
+	PROP
+	{
+		name = Monitor_Keyboard
+		position = 0.2175,-0.0385,0.0574
+		rotation = 0,0,0,1
+		scale = 1.574346,1.574344,1.574344
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.4716,-0.135,-0.661
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 0.4935602,0.39278,0.4393302
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.4716,-0.135,-0.423
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 0.4935602,0.39278,0.4393302
+	}
+	PROP
+	{
+		name = Knes_Seat_Passenger
+		position = 0.17,-0.4226,-0.378
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = directionalKnob
+		position = 0.4324,-0.0587,-0.0483
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.4716,-0.135,-0.2221
+		rotation = 0,0,0,1
+		scale = 0.3178782,0.3820885,0.4531287
+	}
+	PROP
+	{
+		name = genericPullSwitch
+		position = 0.0752,-0.1251,0.0394
+		rotation = 0,0,0,1
+		scale = 1.762913,1.762913,1.762913
+	}
+	PROP
+	{
+		name = directionalKnob
+		position = 0.4707,-0.0587,-0.0483
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericSquareButton
+		position = 0.5136,-0.0583,-0.0491
+		rotation = 0,0,0,1
 		scale = 1,1,1
 	}
 }
