--- a/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_ScienceLab_IVA.cfg
+++ b/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_ScienceLab_IVA.cfg
@@ -82,7 +82,7 @@ INTERNAL
 	}
 	PROP
 	{
-		name = Monitor_Keyboard
+		name = Knes_Monitor_Keyboard
 		position = 0.2175,-0.0385,0.0574
 		rotation = 0,0,0,1
 		scale = 1.574346,1.574344,1.574344
