--- a/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_CrystalFactory_IVA.cfg
+++ b/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_CrystalFactory_IVA.cfg
@@ -138,6 +138,13 @@ INTERNAL
 	}
 	PROP
 	{
+		name = Knes_Monitor
+		position = -0.5075,0.203,0
+		rotation = -0.1160559,-0.6975178,-0.1160559,0.6975178
+		scale = 1.500001,1.5,1.500001
+	}
+	PROP
+	{
 		name = Knes_Monitor_SideMount
 		position = -0.5355,0.0118,0
 		rotation = 0,-0.7071068,0,0.7071068
