--- a/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA.cfg
+++ b/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA.cfg
@@ -1,4 +1,4 @@
-﻿INTERNAL
+INTERNAL
 {
 	name = Station_Module_Hab_IVA
 	MODEL
@@ -8,21 +8,13 @@
 	MODEL
 	{
 		model = Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA2
-	}	
-//	MODEL
-//	{
-//		model = Squad/Spaces/OverlayMasks/Mk1CabinMask
-//	}
-//	MODEL
-//	{
-//		model = Squad/Spaces/OverlayMasks/Mk1CabinBorder
-//	}
+	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = Seat1
 		allowCrewHelmet = false
-		displayseatName = #autoLoc_6002197 //#autoLoc_6002197 = Seat <<1>>
+		displayseatName = #autoLoc_6002197
 		displayseatIndex = 1
 	}
 	MODULE
@@ -30,7 +22,7 @@
 		name = InternalSeat
 		seatTransformName = Seat2
 		allowCrewHelmet = false
-		displayseatName = #autoLoc_6002197 //#autoLoc_6002197 = Seat <<1>>
+		displayseatName = #autoLoc_6002197
 		displayseatIndex = 2
 	}
 	MODULE
@@ -91,16 +83,16 @@
 	}
 	PROP
 	{
-		name = Seat_Passenger
-		position = 0.1875,-0.4125,-0.3750001
-		rotation = 8.146034E-08,0,0,1
+		name = Knes_Seat_Passenger
+		position = 0.187,-0.4287,-0.391
+		rotation = 0,0,0,1
 		scale = 1,1,1
 	}
 	PROP
 	{
-		name = Seat_Passenger
-		position = 0.1875,-0.4125,0.3750001
-		rotation = -2.16942E-14,1,-1.331581E-07,-1.629207E-07
+		name = Knes_Seat_Passenger
+		position = 0.187,-0.4287,0.382
+		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 }
