--- a/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_ScienceLab_IVA.cfg
+++ b/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_ScienceLab_IVA.cfg
@@ -143,4 +143,109 @@ INTERNAL
 		rotation = 0,0,0,1
 		scale = 1,1,1
 	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.4966,-0.133,-0.5779
+		rotation = 0.3244511,-0.6282766,0.3244511,0.6282766
+		scale = 1.028788,1.028787,1.028787
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.4966,-0.133,-0.4431
+		rotation = 0.3244511,-0.6282766,0.3244511,0.6282766
+		scale = 1.02879,1.02879,1.02879
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.4244,-0.1907,-0.445
+		rotation = -0.2054044,-0.6766159,-0.2054044,0.6766159
+		scale = 0.7534971,0.7534971,0.7534971
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.4244,-0.1907,-0.578
+		rotation = -0.2054044,-0.6766159,-0.2054044,0.6766159
+		scale = 0.7535,0.7535,0.7535001
+	}
+	PROP
+	{
+		name = genericClusterSwitches01
+		position = -0.4984,-0.138,-0.1886
+		rotation = 0.2107974,0.6749552,-0.2107974,0.6749552
+		scale = 0.7341036,0.7341036,0.7341036
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.4244,-0.1907,-0.1884
+		rotation = -0.2054044,-0.6766159,-0.2054044,0.6766159
+		scale = 0.7535,0.7535,0.7535001
+	}
+	PROP
+	{
+		name = genericClusterKnobs2
+		position = -0.475,-0.154,-0.3136
+		rotation = 0,0,-0.3007421,0.9537055
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.4244,-0.1907,0.0612
+		rotation = -0.2054044,-0.6766159,-0.2054044,0.6766159
+		scale = 0.7535,0.7535,0.7535001
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.4966,-0.133,0.062
+		rotation = 0.3244511,-0.6282766,0.3244511,0.6282766
+		scale = 0.971324,0.9713241,0.9713241
+	}
+	PROP
+	{
+		name = IndicatorPanel
+		position = -0.3768,0.2064,0.839
+		rotation = -0.4999999,-0.5000002,0.5000002,-0.4999999
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericClusterKnobs2
+		position = -0.475,-0.154,0.185
+		rotation = 0,0,-0.3007421,0.9537055
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericClusterSwitches01
+		position = -0.4984,-0.138,0.444
+		rotation = 0.2107974,0.6749552,-0.2107974,0.6749552
+		scale = 0.7340999,0.7341,0.7341
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.4244,-0.1907,0.4442
+		rotation = -0.2054044,-0.6766159,-0.2054044,0.6766159
+		scale = 0.7535,0.7535,0.7535001
+	}
+	PROP
+	{
+		name = genericClusterSwitches01
+		position = -0.4984,-0.138,0.5757
+		rotation = 0.2107974,0.6749552,-0.2107974,0.6749552
+		scale = 0.7341002,0.7341001,0.7341002
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.4244,-0.1907,0.5759
+		rotation = -0.2054044,-0.6766159,-0.2054044,0.6766159
+		scale = 0.7535,0.7535,0.7535001
+	}
 }
