Fix EndCap 0625 bad name

--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_0625.cfg
@@ -4,7 +4,7 @@
 
 PART
 {
-	name = _Knes_Station_Module_EndCap_0625.cfg
+	name = _Knes_Station_Module_EndCap_0625
 	module = Part
 	author = Well
 	
