--- a/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
@@ -21,7 +21,7 @@ PART
 	TechRequired = survivability
 	entryCost = 800
 	cost = 50
-	category = Utility
+	category = Structural
 	subcategory = 0
 	title = K0625 "Pingu" EndCap
     manufacturer = Knes	
