--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
@@ -45,7 +45,7 @@ PART
     crashTolerance = 15
 	breakingForce = 150
 	breakingTorque = 150
-	maxTemp = 2000 // = 3000
+	maxTemp = 2500
 	fuelCrossFeed = True	
 
     stagingIcon = LIQUID_ENGINE
