--- a/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_1875.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_1875.cfg
@@ -81,7 +81,7 @@ PART
 		UnitAreaCost = 12
 		
 		stagingToggleEnabledEditor = True
-		stagingToggleEnabledFlight = False
+		stagingToggleEnabledFlight = True
 		stagingEnableText = #autoLOC_502000 //#autoLOC_502000 = Fairing Not Staged
 		stagingDisableText = #autoLOC_502001 //#autoLOC_502001 = Fairing Staged		
 	}
