--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_09375.cfg
@@ -82,7 +82,7 @@ PART
 		useClamshell = True
 
 		stagingToggleEnabledEditor = True
-		stagingToggleEnabledFlight = False
+		stagingToggleEnabledFlight = True
 		stagingEnableText = #autoLOC_502000 //#autoLOC_502000 = Fairing Not Staged
 		stagingDisableText = #autoLOC_502001 //#autoLOC_502001 = Fairing Staged
 	}
