--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/Knes_Pod_StarRider.cfg
@@ -10,20 +10,20 @@ PART
 
 	MODEL
 	{
-	   model = Knes/Parts/LiftingsBodies/IXV/Knes_Command_K-IXV
+	   model = Knes/Parts/LiftingsBodies/StarRider/Knes_Pod_StarRider
 	}
 
 	scale = 1
-	rescaleFactor = 0.92
+	rescaleFactor = 1
 
 // --- node definitions ---
 // definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
-	node_stack_bottom = 0.0, -2.2, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_top = 0.0, 1.7, 0.0, 0.0, 1.0, 0.0, 1	
+	node_stack_bottom = 0.0, -1.31824, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 1.88403, 0.0, 0.0, 1.0, 0.0, 1	
 	bulkheadProfiles = size1
-	CoMOffset = 0.0, -0.3, 0.0 
-	CoPOffset = 0.0, -0.3, 0.0 
-	CoLOffset = 0.0, -0.3, 0.0 
+	CoLOffset = 0, -0.3, 0.2
+	CoPOffset = 0, -0.2, 0.2
+	CoMOffset = 0, 0, 0
 	breakingForce = 55
 	breakingTorque = 55
 
@@ -33,16 +33,16 @@ PART
 	cost = 4000
 	category = Pods
 	subcategory = 0
-	title = K-IXV "Patin" Command Pod
+	title = K-IXV "StarRider" Command Pod
 	manufacturer = Knes
-	description = K-IXV "Patin" used a lifting body arrangement with no wings of any sort. Re-entry was accomplished in a nose-high attitude like the Space Shuttle, with manoeuvring accomplished by rolling out-of-plane and then lifting in that direction, like an aircraft. Landing was accomplished by parachute. The K-IXV Command Pod was heralded as a far safer and more reliable option than its predecessors.
-	tags = command pod knes K-IXV control fly pilot plane space Patin
+	description = K-IXV "StarRider" used a lifting body arrangement with no wings of any sort. Re-entry was accomplished in a nose-high attitude like the Space Shuttle, with manoeuvring accomplished by rolling out-of-plane and then lifting in that direction, like an aircraft. Landing was accomplished by parachute. The K-IXV Command Pod was heralded as a far safer and more reliable option than its predecessors.
+	tags = command pod knes K-IXV control fly pilot plane space StarRider
 
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
 
 // --- standard part parameters ---
-	mass = 1.2
+	mass = 1.5
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
@@ -61,7 +61,7 @@ PART
 	INTERNAL
 	{
 		name = K-IXV_IVA
-		offset = 0, -0.2, 0.18
+		offset = 0, -0.2, 0.14
 	}
 	
 	MODULE
@@ -78,9 +78,15 @@ PART
 	
 	RESOURCE
 	{
+		name = MonoPropellant
+		amount = 100
+		maxAmount = 100
+	}	
+	RESOURCE
+	{
 		name = ElectricCharge
-		amount = 400
-		maxAmount = 400
+		amount = 500
+		maxAmount = 500
 	}
 
 	MODULE
@@ -94,7 +100,7 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 0.18
+			rate = 0.15
 		}
 	}
 
@@ -123,13 +129,6 @@ PART
 		storageRange = 3.0
 	}
 
-	RESOURCE
-	{
-		name = MonoPropellant
-		amount = 150
-		maxAmount = 150
-	}
-
 	MODULE
 	{
 		name = ModuleConductionMultiplier
@@ -141,11 +140,11 @@ PART
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = False
-		deflectionLiftCoeff = 0.45
+		deflectionLiftCoeff = 0.85
 		dragAtMaxAoA = 0.1
 		dragAtMinAoA = 0.04
 	}
-	
+
 	MODULE
 	{
 		name = ModuleDataTransmitter
@@ -159,7 +158,53 @@ PART
 		packetFloor = .1
 		packetCeiling = 5
 	}
+	EFFECTS
+	{
+		RCSFx
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = RCS
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.1 0.0
+				volume = 0.5 0.025
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCS
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}		
+	}
 	
+	
+	MODULE
+	{
+		name = ModuleRCSFX
+		stagingEnabled = False
+		thrusterTransformName = RCS
+		thrusterPower = 0.5
+		resourceName = MonoPropellant
+		resourceFlowMode = STAGE_PRIORITY_FLOW
+		runningEffectName = RCSFx
+		atmosphereCurve
+		{
+		 key = 0 460
+		 key = 1 200
+		}
+	}		
 	MODULE
 	{
 		name = ModuleProbeControlPoint
