--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
@@ -24,6 +24,7 @@ PART
 	CoLOffset = 0, -0.3, 0.2
 	CoPOffset = 0, -0.2, 0.2
 	CoMOffset = 0, 0, 0
+	
 	breakingForce = 55
 	breakingTorque = 55
 
@@ -42,7 +43,7 @@ PART
 	attachRules = 1,0,1,1,0
 
 // --- standard part parameters ---
-	mass = 1.5
+	mass = 1.2
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
@@ -73,7 +74,26 @@ PART
 	MODULE
 	{
 		name = ModuleCommand
-		minimumCrew = 1	
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.005
+		}
+		hasHibernation = True
+		defaultControlPointDisplayName = #autoLOC_6011003 //#autoLOC_6011003 = Default
+		CONTROLPOINT
+		{
+			name = forward
+			displayName = #autoLOC_6011001 //#autoLOC_6011001 = Forward
+			orientation = 90,0,0
+		}
+		CONTROLPOINT
+		{
+			name = reverse
+			displayName = #autoLOC_6011004 //#autoLOC_6011004 = Reversed
+			orientation = 0,0,180
+		}
 	}
 	
 	RESOURCE
@@ -93,17 +113,17 @@ PART
 	{
 		name = ModuleReactionWheel
 		
-		PitchTorque = 8
-		YawTorque = 8
-		RollTorque = 8
+		PitchTorque = 5
+		YawTorque = 5
+		RollTorque = 4
 		
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 0.15
+			rate = 0.08
 		}
 	}
-
+	
 	MODULE
 	{
 		name = ModuleScienceExperiment	
@@ -140,7 +160,7 @@ PART
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = False
-		deflectionLiftCoeff = 0.85
+		deflectionLiftCoeff = 1.0
 		dragAtMaxAoA = 0.1
 		dragAtMinAoA = 0.04
 	}
