--- a/GameData/Knes/Parts/Core/Parachute/_Knes_Paraglider_srf.cfg
+++ b/GameData/Knes/Parts/Core/Parachute/_Knes_Paraglider_srf.cfg
@@ -18,7 +18,7 @@ PART
 	attachRules = 1,1,1,1,0
 	
 	buoyancyUseCubeNamed = PACKED
-	bulkheadProfiles = size0
+	bulkheadProfiles = srf
 
 	sound_parachute_open = activate
 	sound_parachute_single = deploy
