--- a/GameData/Knes/Parts/Spacecraft/_Knes_Service_Module_Viking_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Service_Module_Viking_09375.cfg
@@ -65,7 +65,7 @@ PART
         minThrust = 0
         maxThrust = 25
 		heatProduction = 25
-		fxOffset = 0, 0, 0.5
+		fxOffset = 0, 0, 0.8
 		PROPELLANT
 		{
 			name = MonoPropellant
@@ -139,23 +139,23 @@ PART
 				channel = Ship
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 1.0 1.0
-				pitch = 0.0 0.8
+				volume = 1.0 0.5
+				pitch = 0.0 0.5
 				pitch = 1.0 1.0
 				loop = true
-			}	
+			}
 			MODEL_MULTI_PARTICLE
 			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = thrustTransform
+				modelName = Squad/FX/Monoprop_big
+				transformName = FXTransform
 				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
+				emission = 0.4 0.5
+				emission = 1.0 0.7
 				speed = 0.0 0.8
 				speed = 1.0 1.0
-				localRotation = 0, 0, 0			
+				localPosition = 0, 0, 0
 			}
-		}		
+		}			
 	}
 	
 	
