--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
@@ -25,8 +25,8 @@ PART
 	CoPOffset = 0, -0.2, 0.2
 	CoMOffset = 0, 0, 0
 	
-	breakingForce = 55
-	breakingTorque = 55
+	breakingForce = 100
+	breakingTorque = 100
 
 // --- editor parameters ---
 	TechRequired = aerodynamicSystems
@@ -43,12 +43,12 @@ PART
 	attachRules = 1,0,1,1,0
 
 // --- standard part parameters ---
-	mass = 1.3
+	mass = 1.8
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
 	angularDrag = 2
-	crashTolerance = 25
+	crashTolerance = 35
 	maxTemp = 3250
 	skinMaxTemp = 3600
 	skinInternalConductionMult = 0.625
@@ -92,19 +92,13 @@ PART
 		
 	}
 	
-	RESOURCE
+	MODULE
 	{
-		name = MonoPropellant
-		amount = 100
-		maxAmount = 100
-	}	
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 500
-		maxAmount = 500
+		name = ModuleProbeControlPoint
+		minimumCrew = 1
+		multiHop = False
 	}
-
+	
 	MODULE
 	{
 		name = ModuleReactionWheel
@@ -156,7 +150,7 @@ PART
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = False
-		deflectionLiftCoeff = 1.0
+		deflectionLiftCoeff = 0.8
 		dragAtMaxAoA = 0.1
 		dragAtMinAoA = 0.04
 	}
@@ -221,11 +215,23 @@ PART
 		 key = 1 200
 		}
 	}		
-	MODULE
-	{
-		name = ModuleProbeControlPoint
-		minimumCrew = 1
-		multiHop = False
-	}
 	
+	RESOURCE
+	{
+		name = MonoPropellant
+		amount = 100
+		maxAmount = 100
+	}	
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 500
+		maxAmount = 500
+	}
+	RESOURCE
+	{
+		name = Ablator
+		amount = 0
+		maxAmount = 100
+	}	
 }
