--- a/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
+++ b/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
@@ -1,7 +1,6 @@
 INTERNAL
 {
 	name = Knes_Pod_StarWatcher_IVA
-	
 	MODULE
 	{
 		name = InternalSeat
@@ -37,5 +36,47 @@ INTERNAL
 		name = InternalSeat
 		seatTransformName = seat6
 		allowCrewHelmet = false
-	}	
+	}
+	PROP
+	{
+		name = Seat_Pilot
+		position = 0.25,-0.5,-1
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Seat_Pilot
+		position = -0.25,-0.5,-1
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Seat_Passenger
+		position = 0.3,-0.588,0
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Seat_Passenger
+		position = -0.3,-0.588,0
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Seat_Passenger
+		position = 0.3,-0.588,0.8
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Seat_Passenger
+		position = -0.3,-0.588,0.8
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
 }
