--- a/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
+++ b/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
@@ -39,6 +39,13 @@ INTERNAL
 	}
 	PROP
 	{
+		name = Hatch_Plane
+		position = 0,0,1.162
+		rotation = -0.7071068,0,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
 		name = Seat_Pilot
 		position = 0.25,-0.5,-1
 		rotation = 0,1,0,0
@@ -54,28 +61,28 @@ INTERNAL
 	PROP
 	{
 		name = Seat_Passenger
-		position = 0.3,-0.588,0
+		position = 0.3,-0.588,-0.1163757
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = -0.3,-0.588,0
+		position = -0.3,-0.588,-0.1163757
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = 0.3,-0.588,0.8
+		position = 0.3,-0.588,0.6836244
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = -0.3,-0.588,0.8
+		position = -0.3,-0.588,0.6836244
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
