--- a/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
+++ b/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
@@ -40,49 +40,49 @@ INTERNAL
 	PROP
 	{
 		name = Hatch_Plane
-		position = 0,0,1.162
+		position = 0,0,1.16
 		rotation = -0.7071068,0,0,0.7071068
+		scale = 0.8458579,0.8458579,0.8458579
+	}
+	PROP
+	{
+		name = Seat_Pilot
+		position = 0.25,-0.5,-0.901011
+		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Pilot
-		position = 0.25,-0.5,-1
-		rotation = 0,1,0,0
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = Seat_Pilot
-		position = -0.25,-0.5,-1
+		position = -0.25,-0.5,-0.901011
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = 0.3,-0.588,-0.1163757
+		position = 0.3,-0.55,0
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = -0.3,-0.588,-0.1163757
+		position = -0.3,-0.55,0
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = 0.3,-0.588,0.6836244
+		position = 0.35,-0.55,0.9
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = -0.3,-0.588,0.6836244
+		position = -0.35,-0.55,0.9
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
