--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_H2_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_H2_Engine_09375.cfg
@@ -29,7 +29,7 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-	title = H2 "Etiona" Cryogenic Engine
+	title = H2 "Crinkle" Cryogenic Engine
 	manufacturer = Knes
 	description = This small 0.9375 Cryogenic engine provides a nice kick to lift small payloads to considerable heights.
 	tags = Diamant Knes 0.9375 engine Diomede
