StarWatcher IVA update

--- a/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
+++ b/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
@@ -47,43 +47,204 @@ INTERNAL
 	PROP
 	{
 		name = Seat_Pilot
-		position = 0.25,-0.5,-0.901011
+		position = 0.25,-0.545,-0.96
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Pilot
-		position = -0.25,-0.5,-0.901011
+		position = -0.25,-0.545,-0.96
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = -0.2459,-0.015,-0.7025
+		rotation = 0,1,0,0
+		scale = 1.1667,1.1667,1.1667
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = 0.2459,-0.015,-0.7025
+		rotation = 0,1,0,0
+		scale = 1.1667,1.1667,1.1667
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.25,-0.355,-0.767
+		rotation = 0.5,0.5,0.5,0.5
+		scale = 0.8004258,0.8004258,0.8004258
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.25,-0.355,-0.767
+		rotation = 0.5,0.5,0.5,0.5
+		scale = 0.80043,0.80043,0.80043
+	}
+	PROP
+	{
+		name = Seat_Passenger
+		position = 0.3,-0.55,-0.15
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = 0.3,-0.55,0
+		position = -0.3,-0.55,-0.15
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = -0.3,-0.015,0.117
+		rotation = 0,1,0,0
+		scale = 1.1667,1.1667,1.1667
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = 0.3,-0.015,0.117
+		rotation = 0,1,0,0
+		scale = 1.1667,1.1667,1.1667
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.3,-0.355,0.059
+		rotation = 0.5,0.5,0.5,0.5
+		scale = 0.80043,0.80043,0.80043
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.3,-0.355,0.059
+		rotation = 0.5,0.5,0.5,0.5
+		scale = 0.80043,0.80043,0.80043
+	}
+	PROP
+	{
+		name = Seat_Passenger
+		position = 0.35,-0.55,0.67
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = -0.3,-0.55,0
+		position = -0.35,-0.55,0.67
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
-		name = Seat_Passenger
-		position = 0.35,-0.55,0.9
-		rotation = 0,1,0,0
-		scale = 1,1,1
+		name = Hatch_Plane_Curve90
+		position = 0,0.509,-0.522
+		rotation = 0.7038396,0.06789606,0.7038396,0.06789606
+		scale = 0.8458579,0.8458579,0.8458579
 	}
 	PROP
 	{
-		name = Seat_Passenger
-		position = -0.35,-0.55,0.9
-		rotation = 0,1,0,0
-		scale = 1,1,1
+		name = Knes_Monitor
+		position = 0.4163,-0.1079,-1.4068
+		rotation = 0,0.8991763,0,0.4375866
+		scale = 0.7117157,0.8367428,0.7117156
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.347,-0.355,0.877
+		rotation = 0.5,0.5,0.5,0.5
+		scale = 0.80043,0.80043,0.80043
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.344,-0.355,0.877
+		rotation = 0.5,0.5,0.5,0.5
+		scale = 0.80043,0.80043,0.80043
+	}
+	PROP
+	{
+		name = genericClusterKnobs2
+		position = 0,-0.2313,-1.4365
+		rotation = 0.3275997,-0.6266406,-0.3275997,0.6266406
+		scale = 0.8858579,0.8858578,0.8858578
+	}
+	PROP
+	{
+		name = genericClusterSwitches01
+		position = -0.0002,0.1581,-1.4267
+		rotation = 0.9399488,0,0,0.3413156
+		scale = 0.6282886,0.6282884,0.6282887
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.4163,-0.1079,-1.4068
+		rotation = 0,0.9018326,0,-0.4320856
+		scale = 0.7117202,0.83674,0.7117202
+	}
+	PROP
+	{
+		name = AxisIndicatorPitch
+		position = 0,-0.0749,-1.4685
+		rotation = -1.986124E-07,0.7071068,0.7071068,1.986124E-07
+		scale = 1.025853,1,1
+	}
+	PROP
+	{
+		name = genericClusterSwitches05
+		position = 0,0.0163,-1.466323
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 0.6589522,0.6589524,0.6589524
+	}
+	PROP
+	{
+		name = genericClusterButtons
+		position = 0.0883,-0.1798,-1.4645
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 0.5274833,0.5274833,0.5274833
+	}
+	PROP
+	{
+		name = NavBall
+		position = 0,-0.1434,-1.4644
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 0.8158579,0.8158579,0.8158579
+	}
+	PROP
+	{
+		name = throttle
+		position = 0,-0.3431,-1.3487
+		rotation = 0.2973215,0,0,0.9547775
+		scale = 0.5316408,0.5316408,0.5316408
+	}
+	PROP
+	{
+		name = genericClusterButtons
+		position = -0.308,-0.1798,-1.4645
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 0.52748,0.5274802,0.5274802
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.35,-0.0815,0.908
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 0.4087053,0.4087052,0.4087052
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.35,-0.0815,0.908
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 0.40871,0.4087102,0.4087102
 	}
 }
