--- a/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
+++ b/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
@@ -37,6 +37,12 @@ INTERNAL
 		seatTransformName = seat6
 		allowCrewHelmet = false
 	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = CameraCabinCollider
+		cameraTransformName = CameraCabin
+	}	
 	PROP
 	{
 		name = Hatch_Plane
@@ -208,7 +214,7 @@ INTERNAL
 	PROP
 	{
 		name = genericClusterButtons
-		position = 0.0883,-0.1798,-1.4645
+		position = 0.2641,-0.1798,-1.4645
 		rotation = 0.7071068,0,0,0.7071068
 		scale = 0.5274833,0.5274833,0.5274833
 	}
@@ -229,7 +235,7 @@ INTERNAL
 	PROP
 	{
 		name = genericClusterButtons
-		position = -0.308,-0.1798,-1.4645
+		position = -0.2644,-0.1798,-1.4645
 		rotation = 0.7071068,0,0,0.7071068
 		scale = 0.52748,0.5274802,0.5274802
 	}
@@ -246,5 +252,145 @@ INTERNAL
 		position = 0.35,-0.0815,0.908
 		rotation = 0.7071068,0,0,0.7071068
 		scale = 0.40871,0.4087102,0.4087102
+	}
+	PROP
+	{
+		name = ledPanelSpeed
+		position = 0.1426,-0.1804,-1.4684
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 0.6958312,0.6958306,0.6958323
+	}
+	PROP
+	{
+		name = VSI
+		position = 0.1417,-0.2203,-1.4451
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = RadarAltimeter
+		position = 0.0742,-0.2199,-1.4445
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = ledPanelSpeed
+		position = -0.0738,-0.1804,-1.4684
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 0.69583,0.6958302,0.6958302
+	}
+	PROP
+	{
+		name = AtmosphereDepth
+		position = 0.0739,-0.1807,-1.4677
+		rotation = 0.5000001,0.5000001,0.5,0.5
+		scale = 0.7,0.7,0.7
+	}
+	PROP
+	{
+		name = VSI
+		position = -0.1417,-0.2203,-1.4451
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = 0.1049,-0.2593,-1.4183
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 0.9117157,0.9117157,0.9117157
+	}
+	PROP
+	{
+		name = RadarAltimeter
+		position = -0.0742,-0.2199,-1.4445
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.1061,-0.2593,-1.4183
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 0.91172,0.9117203,0.9117203
+	}
+	PROP
+	{
+		name = genericClusterSwitches01
+		position = 0.1156,0.236,-1.3354
+		rotation = 0.9399488,0,0,0.3413156
+		scale = 0.62829,0.6282904,0.6282904
+	}
+	PROP
+	{
+		name = genericClusterSwitches01
+		position = -0.1156,0.236,-1.3354
+		rotation = 0.9399488,0,0,0.3413156
+		scale = 0.62829,0.6282904,0.6282904
+	}
+	PROP
+	{
+		name = genericClusterSwitches01
+		position = -0.2101,0.236,-1.3354
+		rotation = 0.9399488,0,0,0.3413156
+		scale = 0.62829,0.6282904,0.6282904
+	}
+	PROP
+	{
+		name = genericClusterSwitches01
+		position = 0.2101,0.236,-1.3354
+		rotation = 0.9399488,0,0,0.3413156
+		scale = 0.62829,0.6282904,0.6282904
+	}
+	PROP
+	{
+		name = IndicatorPanel
+		position = 0.2706,-0.2307,-1.4294
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 0.6961784,0.6961784,0.6961787
+	}
+	PROP
+	{
+		name = genericClusterSwitches03
+		position = 0.3346,-0.2335,-1.4355
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 0.6993551,0.6993553,0.6993553
+	}
+	PROP
+	{
+		name = IndicatorPanel
+		position = -0.2706,-0.2307,-1.4294
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 0.69618,0.6961802,0.6961802
+	}
+	PROP
+	{
+		name = genericClusterSwitches03
+		position = -0.3346,-0.2335,-1.4355
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 0.69936,0.6993601,0.6993601
+	}
+	PROP
+	{
+		name = AtmosphereDepth
+		position = -0.1422,-0.1807,-1.4677
+		rotation = 0.5000001,0.5000001,0.5,0.5
+		scale = 0.7000002,0.7000002,0.7000002
+	}
+	PROP
+	{
+		name = genericClusterSwitches03
+		position = 0.2079,-0.2335,-1.4355
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 0.69936,0.6993601,0.6993601
+	}
+	PROP
+	{
+		name = genericClusterSwitches03
+		position = -0.2079,-0.2335,-1.4355
+		rotation = 0.4617486,0,0,0.8870109
+		scale = 0.69936,0.6993601,0.6993601
 	}
 }
