--- a/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
+++ b/GameData/Knes/Spaces/Pod_StarWatcher_IVA/internal.cfg
@@ -1,6 +1,16 @@
 INTERNAL
 {
 	name = Knes_Pod_StarWatcher_IVA
+	
+	MODEL
+	{
+		model = Knes/Spaces/Pod_StarWatcher_IVA/Knes_Pod_StarWatcher_IVA
+	}	
+	MODEL
+	{
+		model = Knes/Spaces/Pod_StarWatcher_IVA/Pod_StarWatcher_IVA_DepthMask
+	}	
+	
 	MODULE
 	{
 		name = InternalSeat
@@ -43,6 +53,18 @@ INTERNAL
 		colliderTransformName = CameraCabinCollider
 		cameraTransformName = CameraCabin
 	}	
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Monitor1_Collider
+		cameraTransformName = Monitor1
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Monitor2_Collider
+		cameraTransformName = Monitor2
+	}		
 	PROP
 	{
 		name = Hatch_Plane
